<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.examples.android.musicalstructure.MainActivity">

    <TextView
        android:id="@+id/nowPlaying"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/first_text_main"
        android:textSize="30sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/allSongs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/second_text_main"
        android:textSize="30sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/third_text_main"
        android:textSize="30sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fourth_text_main"
        android:textSize="30sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fifth_text_main"
        android:textSize="30sp"
        android:textColor="@color/colorText"/>
</LinearLayout>
